force-app/main/default/objects/SOLXYZCSO001__ReportOutputRuleMultiData__c/SOLXYZCSO001__ReportOutputRuleMultiData__c.object-meta.xml
<CustomObject>
    <label>帳票出力ルールマルチオブジェクトデータ値</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>帳票出力ルールマルチオブジェクトデータ値ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>