force-app/main/default/objects/SOLXYZCSO001__ReportOutputRuleMultiData__c/fields/SOLXYZCSO001__InputValue__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__InputValue__c</fullName>
    <label>入力値</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>