force-app/main/default/objects/SOLXYZCSO001__ReportOutputRuleMultiData__c/fields/SOLXYZCSO001__SheetId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SheetId__c</fullName>
    <label>シートID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>